# Radar-Project

./: .gitignore  CMakeLists.txt  Makefile  Q-VIEW  TerrainGrid.cpp  caltools.cpp  package.sh  radar.cpp  radar_server.cpp  test
.cache/clangd/index/: RTree.h.EC9DADEECCA599AC.idx  adaptive_quadtree_2d.cpp.FC29E91944F5E6A4.idx  adaptive_quadtree_2d.hpp.AF3C8E03E1DDC4E8.idx  caltools.cpp.1BC16BEC599882AF.idx  caltools.h.71E5233EE9C8B54C.idx  clipp.h.E87F318D0DFC45AF.idx  dem_generator.cpp.4F041074093074B5.idx  dem_generator.hpp.4991AE8020E4A979.idx  dem_loader.cpp.B7F924E5D82CFCF9.idx  dem_loader.hpp.4600524C9BD9E347.idx  dem_visibility.cpp.7CA0A1EE18E9DA3D.idx  dem_visibility.hpp.C9DD435CA68C7DF1.idx  energy_grid_2d.cpp.2CA02C73EC102C70.idx  energy_grid_2d.hpp.27CA1919B987F1A8.idx  fixed_height_comparator.cpp.8B7A4E392462F266.idx  fixed_height_comparator.hpp.4E417723CFC73FB3.idx  fixed_height_experiment.cpp.FBE971C386CF3CCA.idx  fixed_height_field_builder_2d.cpp.275412079F01E4BD.idx  fixed_height_field_builder_2d.hpp.CAFE8244B0BE1C6D.idx  fixed_height_quadtree_2d.cpp.FC0D43728ACAFED6.idx  fixed_height_quadtree_2d_tests.cpp.0E6DEFAE04ADE6FA.idx  fixed_height_quadtree_monte_carlo.cpp.BE07E76680B8C44C.idx  geosot3d.cpp.2A33C518F9D5E788.idx  geosot3d.hpp.434E6EFCA9E02071.idx  grid.hpp.D580DE28C70DF0A0.idx  httplib.h.8051390B314AAFBB.idx  interface.cpp.8F0F2AC11EED39A7.idx  interface.hpp.7478E3E5C0653ACA.idx  kernel.h.B7DA298746B7B615.idx  local_tangent_frame.cpp.08BDE0F294F0BB35.idx  local_tangent_frame.hpp.4FEF1CC82931C470.idx  morton.h.0C86F56AAE709333.idx  morton2D.h.E7F1A11D49C412F1.idx  morton2D_LUTs.h.F927E63059B25332.idx  morton3D.h.46E5647A68C17D02.idx  morton3D_LUTs.h.F54AFE232730B4BF.idx  morton_common.h.7731A6A23A3D7C0D.idx  occlusion_utils.cpp.263BC7927AAE14F6.idx  occlusion_utils.h.2318FEF77CA722C1.idx  query3dRtree.h.7124B103FE381BDB.idx  (+5 more)
db/: create_db.sh  run_db_server.sh
db/sql/: radar_db.sql
geosot3d/: .gitignore  CMakeLists.txt  Makefile  demo.cpp  geosot3d.cpp  geosot3d.hpp
include/: hiradar.hpp
include/hiradar/: RTree.h  adaptive_quadtree_2d.hpp  caltools.h  dataset_config.hpp  dem_generator.hpp  dem_loader.hpp  dem_visibility.hpp  energy_grid_2d.hpp  fixed_height_comparator.hpp  fixed_height_field_builder_2d.hpp  grid.hpp  interface.hpp  local_tangent_frame.hpp  occlusion_utils.h  query3dRtree.h  radar.hpp  radar_pool.hpp  writer.hpp
radar/: Makefile  gdal_test  gdal_test.cpp  radar_client.cpp  radar_pool.hpp  server.cpp
radar/db/sql/: radar_db.sql
src/: Q-view.cpp  adaptive_quadtree_2d.cpp  caltools.cpp  comparison_experiment.cpp  dem_generator.cpp  dem_loader.cpp  dem_visibility.cpp  energy_grid_2d.cpp  fixed_height_comparator.cpp  fixed_height_experiment.cpp  fixed_height_field_builder_2d.cpp  fixed_height_quadtree_2d.cpp  fixed_height_quadtree_2d_tests.cpp  fixed_height_quadtree_monte_carlo.cpp  interface.cpp  local_tangent_frame.cpp  main.cpp  occlusion_utils.cpp  radar.cpp  scaling_memory_benchmark.cpp  server_new2.cpp  test.cpp
src/legacy/: server.cpp  server_new.cpp
